hide scrollbar and fix promotion button

--- a/app/globals.css
+++ b/app/globals.css
@@ -143,5 +143,17 @@
     --state-info-primary: #0061C7;
     --state-info-secondary: #00162E;
   }
+  
+  /* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+}
+
 }
  
